--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "App/library",
+            "tests/TestCase.php"
         ],
         "psr-4": {
             "App\\": "app/"
@@ -36,6 +38,7 @@
             "php artisan clear-compiled"
         ],
         "post-update-cmd": [
+            "php artisan clear-compiled",
             "php artisan optimize"
         ],
         "post-root-package-install": [
