--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "classmap": [
             "database",
             "App/library",
-            "tests/TestCase.php"
+            "tests/TestCase.php",
+            "App/Getui"
         ],
         "psr-4": {
             "App\\": "app/"
